syntax = "proto3";

package kvraftpb;

enum Op {
    Unknown = 0;
    Put = 1;
    Append = 2;
}

/// Put or Append
message PutAppendRequest {
    string key = 1;
    string value = 2;
    // "Put" or "Append"
    Op op = 3;
    string server_name = 4;
    uint64 cmd_index = 5;
}

message PutAppendReply {
    bool wrong_leader = 1;
    string err = 2;
}

message GetRequest {
    string key = 1;
    string server_name = 2;
    uint64 cmd_index = 3;
}

message GetReply {
    bool wrong_leader = 1;
    string err = 2;
    string value = 3;
}
